KSENROLL-11085: UI Issue - ACAL - Lozenges aren't left aligned to Status title
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@60977 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/mixins.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/mixins.less
@@ -27,6 +27,9 @@
   font-size: 0.84615384615385em;
   padding: 2px 8px;
   margin-left: 1em;
+  td &{
+    margin-left: 0px;
+  }
   text-transform: uppercase;
   white-space: nowrap;
   font-weight:bold;
